# Capacitor-NodeJS

./: .gitignore  CHANGELOG.md  CapacitorNodejs.podspec  LICENSE  Package.swift  README.md  UPGRADING.md  package-lock.json  package.json  rollup.config.js  rollup.config.mjs  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
android/: .gitignore  CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/assets/: .gitignore
android/src/main/assets/builtin_modules/: bridge.js
android/src/main/cpp/: Bridge.cpp  Bridge.h  bridge.cpp  bridge.h  native-lib.cpp
android/src/main/java/com/hampoelz/capacitor/nodejs/: FileOperations.java  NodeJS.java  NodeJSPlugin.java
android/src/main/java/net/hampoelz/capacitor/nodejs/: CapacitorNodeJS.java  CapacitorNodeJSPlugin.java  FileOperations.java  NodeJS.java  NodeJSPlugin.java  NodeProcess.java
assets/: .gitignore  .npmignore
assets/builtin_modules/bridge/: bridge.js
bridge/: bridge.js  main.js  package.module.json  package.types.json  rollup.config.js  tsconfig.json
bridge/src/: bridge.ts  definitions.ts  index.ts  utils.ts
configs/: strict.json
electron/: rollup.config.js  rollup.config.mjs  tsconfig.json
electron/assets/builtin_modules/bridge/: bridge.js  main.js  package.json
electron/src/: implementation.ts  index.ts  utils.ts
ios/Plugin/: NodeJS.swift  NodeJSPlugin.m  NodeJSPlugin.swift
ios/Plugin.xcodeproj/: project.pbxproj
ios/PluginTests/: NodeJSPluginTests.swift
src/: NodeJS.ts  definitions.ts  implementation.ts  index.ts  web.ts
